# phyloBGC

./: LICENSE  README.md  commond_line.py  main.py  pyproject.toml
phyloBGC/: checkM_evaluation.py  commond_line.py  down_and_validation.py  gtdbtk_evaluation.py  main.py  run_antismash.py  run_bigscape.py
phyloBGC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submain/: checkM_evaluation.py  down_and_validation.py  gtdbtk_evaluation.py  run_antismash.py
